--- a/hw-02-03.ipynb
+++ b/hw-02-03.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4  National Geographic Kids          4.8     7665     12  2019  Non Fiction  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "(550, 7)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "array(['Non Fiction', 'Fiction'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "median   11.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
        "max          4.9"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "28"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "534  Fiction  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "277  Non Fiction  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "20"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
        "253      7  2015  Fiction  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
        "Non Fiction     0  105"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>count</th>\n",
+       "      <th>count_books</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>author</th>\n",
@@ -982,24 +982,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                            count\n",
-       "author                           \n",
-       "Abraham Verghese                1\n",
-       "Adam Gasiewski                  1\n",
-       "Adam Mansbach                   1\n",
-       "Adir Levy                       1\n",
-       "Admiral William H. McRaven      1\n",
-       "...                           ...\n",
-       "Walter Isaacson                 2\n",
-       "William Davis                   1\n",
-       "William P. Young                1\n",
-       "Wizards RPG Team                1\n",
-       "Zhi Gang Sha                    2\n",
+       "                            count_books\n",
+       "author                                 \n",
+       "Abraham Verghese                      1\n",
+       "Adam Gasiewski                        1\n",
+       "Adam Mansbach                         1\n",
+       "Adir Levy                             1\n",
+       "Admiral William H. McRaven            1\n",
+       "...                                 ...\n",
+       "Walter Isaacson                       2\n",
+       "William Davis                         1\n",
+       "William P. Young                      1\n",
+       "Wizards RPG Team                      1\n",
+       "Zhi Gang Sha                          2\n",
        "\n",
        "[248 rows x 1 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>count</th>\n",
+       "      <th>count_books</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>author</th>\n",
@@ -1061,18 +1061,18 @@
        "</div>"
       ],
       "text/plain": [
-       "             count\n",
-       "author            \n",
-       "Jeff Kinney     12"
+       "             count_books\n",
+       "author                  \n",
+       "Jeff Kinney           12"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_books[data_books[\"count\"] == data_books[\"count\"].max()]"
+    "data_books[data_books[\"count_books\"] == data_books[\"count_books\"].max()]"
    ]
   },
   {
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
        "[248 rows x 1 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1256,7 @@
        "Donna Tartt          3.9"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1308,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>count</th>\n",
+       "      <th>count_books</th>\n",
        "      <th>user_rating</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1319,29 +1319,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Abraham Verghese</th>\n",
+       "      <th>Donna Tartt</th>\n",
        "      <td>1</td>\n",
-       "      <td>4.60</td>\n",
+       "      <td>3.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Adam Gasiewski</th>\n",
+       "      <th>Gallup</th>\n",
        "      <td>1</td>\n",
-       "      <td>4.40</td>\n",
+       "      <td>4.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Adam Mansbach</th>\n",
+       "      <th>Gillian Flynn</th>\n",
        "      <td>1</td>\n",
-       "      <td>4.80</td>\n",
+       "      <td>4.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Adir Levy</th>\n",
+       "      <th>Muriel Barbery</th>\n",
        "      <td>1</td>\n",
-       "      <td>4.80</td>\n",
+       "      <td>4.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Admiral William H. McRaven</th>\n",
+       "      <th>Chris Cleave</th>\n",
        "      <td>1</td>\n",
-       "      <td>4.70</td>\n",
+       "      <td>4.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1349,29 +1349,29 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Walter Isaacson</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4.55</td>\n",
+       "      <th>Bill O'Reilly</th>\n",
+       "      <td>6</td>\n",
+       "      <td>4.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>William Davis</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4.40</td>\n",
+       "      <th>Dav Pilkey</th>\n",
+       "      <td>6</td>\n",
+       "      <td>4.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>William P. Young</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4.60</td>\n",
+       "      <th>Stephenie Meyer</th>\n",
+       "      <td>7</td>\n",
+       "      <td>4.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Wizards RPG Team</th>\n",
-       "      <td>1</td>\n",
+       "      <th>Rick Riordan</th>\n",
+       "      <td>10</td>\n",
+       "      <td>4.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jeff Kinney</th>\n",
+       "      <td>12</td>\n",
        "      <td>4.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Zhi Gang Sha</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4.60</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1379,31 +1379,105 @@
        "</div>"
       ],
       "text/plain": [
-       "                            count  user_rating\n",
-       "author                                        \n",
-       "Abraham Verghese                1         4.60\n",
-       "Adam Gasiewski                  1         4.40\n",
-       "Adam Mansbach                   1         4.80\n",
-       "Adir Levy                       1         4.80\n",
-       "Admiral William H. McRaven      1         4.70\n",
-       "...                           ...          ...\n",
-       "Walter Isaacson                 2         4.55\n",
-       "William Davis                   1         4.40\n",
-       "William P. Young                1         4.60\n",
-       "Wizards RPG Team                1         4.80\n",
-       "Zhi Gang Sha                    2         4.60\n",
+       "                 count_books  user_rating\n",
+       "author                                   \n",
+       "Donna Tartt                1         3.90\n",
+       "Gallup                     1         4.00\n",
+       "Gillian Flynn              1         4.00\n",
+       "Muriel Barbery             1         4.00\n",
+       "Chris Cleave               1         4.10\n",
+       "...                      ...          ...\n",
+       "Bill O'Reilly              6         4.65\n",
+       "Dav Pilkey                 6         4.90\n",
+       "Stephenie Meyer            7         4.65\n",
+       "Rick Riordan              10         4.70\n",
+       "Jeff Kinney               12         4.80\n",
        "\n",
        "[248 rows x 2 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.concat([data_books, data_books_rating], axis=1)\n",
+    "data = pd.concat([data_books, data_books_rating], axis=1).sort_values(by=([\"count_books\", \"user_rating\"]), ascending=([True, True]))\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Який автор перший у списку?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count_books</th>\n",
+       "      <th>user_rating</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>author</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Donna Tartt</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             count_books  user_rating\n",
+       "author                               \n",
+       "Donna Tartt            1          3.9"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Відповідь: Donna Tartt"
    ]
   }
  ],
