--- a/hw-02-03.ipynb
+++ b/hw-02-03.ipynb
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1396,14 +1396,14 @@
        "[248 rows x 2 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.concat([data_books, data_books_rating], axis=1).sort_values(by=([\"count_books\", \"user_rating\"]), ascending=([True, True]))\n",
-    "data"
+    "data_authors = pd.concat([data_books, data_books_rating], axis=1).sort_values(by=([\"count_books\", \"user_rating\"]), ascending=([True, True]))\n",
+    "data_authors"
    ]
   },
   {
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1464,13 +1464,13 @@
        "Donna Tartt            1          3.9"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head(1)"
+    "data_authors.head(1)"
    ]
   },
   {
