--- a/hw-02-03.ipynb
+++ b/hw-02-03.ipynb
@@ -157,22 +157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(550, 7)"
+       "550"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataframe.shape"
+    "dataframe.shape[0]"
    ]
   },
   {
