--- a/hw-03.ipynb
+++ b/hw-03.ipynb
@@ -299,7 +299,9 @@
     "URL = \"https://drive.usercontent.google.com/download?id=1-rAa4XT4_fI0dOBlMNuE6a7jB0wln_Qo&export=download\"\n",
     "\n",
     "dataframe = pd.read_csv(URL, header=0)\n",
-    "dataframe\n"
+    "if len(dataframe) == 0:\n",
+    "    print(\"Error: file not found\")\n",
+    "    raise ValueError\n"
    ]
   },
   {
