work with data set

--- a/hw-03.ipynb
+++ b/hw-03.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "[545 rows x 13 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,9 @@
     "dataframe = pd.read_csv(URL, header=0)\n",
     "if len(dataframe) == 0:\n",
     "    print(\"Error: file not found\")\n",
-    "    raise ValueError\n"
+    "    raise ValueError\n",
+    "\n",
+    "dataframe\n"
    ]
   },
   {
