--- a/hw-03.ipynb
+++ b/hw-03.ipynb
@@ -11,7 +11,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "h(x) = w0 + w1*x"
+    "$$h(x) = \\omega_{0} + \\omega_{1}x$$\n",
+    "$$h(x_{1},x_{2}) = \\omega_{0} + \\omega_{1}x_{1} + \\omega_{2}x_{2}$$\n",
+    "$$h(x_{1},....,x_{n}) = \\omega_{0} + \\omega_{1}x_{1} + ... +\\omega_{n}x_{n}$$\n",
+    "$$h(x_{i}) = \\omega_{0} + \\sum \\limits _{i=1} ^{n} \\omega_{n} x_{n}$$\n",
+    "$$ \\vec{x} = \\begin{pmatrix} 1 \\\\ x_{1} \\\\ \\vdots \\\\ x_{2}\\end{pmatrix} ,   \\vec{\\omega} = \\begin{pmatrix} \\omega_{0} \\\\ \\omega_{1} \\\\ \\vdots \\\\ \\omega_{2}\\end{pmatrix}$$\n",
+    "$$h(\\vec{x}) = \\vec{x} \\cdot \\vec{\\omega}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def linear_regression(x: np.array, w: np.array):\n",
+    "    assert x.shape[0] == w.shape[1], \"Wrong shapes\"\n",
+    "    return np.dot(x, w)"
    ]
   },
   {
@@ -19,6 +44,23 @@
    "metadata": {},
    "source": [
     "## Cтворіть функцію для обчислення функції втрат у векторному вигляді"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ J(\\omega_{0}, \\omega_{}, ..., \\omega_{n}) = \\cfrac 1 {2m} \\sum \\limits _{i=1} ^{m} (h(x^{(i)} - y^{(i)}))^2 $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loss(x: np.array, w: np.array, y: np.array):\n",
+    "    return np.sum(np.square(linear_regression(x, w) - y) / 2 * x.shape[0])"
    ]
   },
   {
