--- a/hw-03.ipynb
+++ b/hw-03.ipynb
@@ -74,6 +74,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$\\Delta J (\\vec \\omega) = \\cfrac 1 {m} X^{T} \\Bigl (X \\vec \\omega -\\vec y \\Bigl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gradient_step(x: np.array, w: np.array, y: np.array, learning_rate: float = 0.01):\n",
+    "    m= x.shape[0]\n",
+    "    delta = x.dot(w) - y\n",
+    "    step = np.dot(x.T, delta) / m\n",
+    "    return w - step*learning_rate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Знайдіть найкращі параметри 𝑤⃗ для [датасету](https://drive.google.com/file/d/1-rAa4XT4_fI0dOBlMNuE6a7jB0wln_Qo/view?usp=share_link) прогнозуючу ціну на будинок залежно від площі, кількості ванних кімнат та кількості спалень"
    ]
   },
