--- a/hw-03.ipynb
+++ b/hw-03.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\Delta J (\\vec \\omega) = \\cfrac 1 {m} X^{T} \\Bigl (X \\vec \\omega -\\vec y \\Bigl)"
+    "$$\\nabla J (\\vec \\omega) = \\cfrac 1 {m} X^{T} \\Bigl (X \\vec \\omega -\\vec y \\Bigl)"
    ]
   },
   {
