--- a/hw-03.ipynb
+++ b/hw-03.ipynb
@@ -83,7 +83,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient_step(x: np.array, w: np.array, y: np.array, learning_rate: float = 0.01):\n",
+    "def gradient_step(x: np.array, w: np.array, y: np.array):\n",
+    "    m= x.shape[0]\n",
+    "    delta = x.dot(w) - y\n",
+    "    return np.dot(x.T, delta) / m\n",
+    "    #step = np.dot(x.T, delta) / m\n",
+    "    # return w - step*learning_rate\n",
+    "\n",
+    "def do_gradient_step(x: np.array, w: np.array, y: np.array, learning_rate: float = 0.01):\n",
+    "    step = gradient_step(x, w, y)\n",
+    "    return w - step*learning_rate\n",
+    "\n",
+    "def gradient_step_do(x: np.array, w: np.array, y: np.array, learning_rate: float = 0.01):\n",
     "    m= x.shape[0]\n",
     "    delta = x.dot(w) - y\n",
     "    step = np.dot(x.T, delta) / m\n",
