--- a/hw-04.ipynb
+++ b/hw-04.ipynb
@@ -6,11 +6,240 @@
    "source": [
     "# На цей раз вам потрібно виконати завдання з цього [ноутбука](\"https://colab.research.google.com/drive/1XpRovHlJJ16FZojZd8-9ci1pyiUiYogx?usp=sharing#scrollTo=Ml3jlosnF0cm\"). Для вирішення запропонованих завдань вам також потрібно завантажити [датасет](\"https://drive.google.com/file/d/1-4wgz9AFXrD3tZfqHJLMhCmy4BUzAX96/view?usp=sharing\") з даними про оренду велосипедів."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Лінійна регресія: перенавчання і регуляризація"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "У цьому завданні ми на прикладах побачимо, як перенавчаються лінійні моделі, розберемо, чому так відбувається, і з'ясуємо, як діагностувати та контролювати перенавчання.\n",
+    "\n",
+    "В усіх комірках, де вказаний коментар з інструкціями, потрібно написати код, який виконує ці інструкції. Решту комірок із кодом (без коментарів) треба просто виконати. Крім того, у завданні необхідно відповідати на запитання; відповіді потрібно вписувати після виділеного слова \"__Відповідь:__\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ми будемо працювати з датасетом __\"bikes_rent.csv\"__, у якому по днях записані календарна інформація та погодні умови, що характеризують автоматизовані пункти прокату велосипедів, а також кількість прокатів у цей день. Останнє ми будемо передбачати; таким чином, ми будемо розв'язувати завдання регресії."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ознайомлення з даними"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Завдання 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Завантажте датасет за допомогою функції __pandas.read_csv__ у змінну __df__. Виведіть перші 5 рядків, щоб переконатися в коректному зчитуванні даних:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>season</th>\n",
+       "      <th>yr</th>\n",
+       "      <th>mnth</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>workingday</th>\n",
+       "      <th>weathersit</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>atemp</th>\n",
+       "      <th>hum</th>\n",
+       "      <th>windspeed(mph)</th>\n",
+       "      <th>windspeed(ms)</th>\n",
+       "      <th>cnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14.110847</td>\n",
+       "      <td>18.18125</td>\n",
+       "      <td>80.5833</td>\n",
+       "      <td>10.749882</td>\n",
+       "      <td>4.805490</td>\n",
+       "      <td>985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14.902598</td>\n",
+       "      <td>17.68695</td>\n",
+       "      <td>69.6087</td>\n",
+       "      <td>16.652113</td>\n",
+       "      <td>7.443949</td>\n",
+       "      <td>801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.050924</td>\n",
+       "      <td>9.47025</td>\n",
+       "      <td>43.7273</td>\n",
+       "      <td>16.636703</td>\n",
+       "      <td>7.437060</td>\n",
+       "      <td>1349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.200000</td>\n",
+       "      <td>10.60610</td>\n",
+       "      <td>59.0435</td>\n",
+       "      <td>10.739832</td>\n",
+       "      <td>4.800998</td>\n",
+       "      <td>1562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9.305237</td>\n",
+       "      <td>11.46350</td>\n",
+       "      <td>43.6957</td>\n",
+       "      <td>12.522300</td>\n",
+       "      <td>5.597810</td>\n",
+       "      <td>1600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   season  yr  mnth  holiday  weekday  workingday  weathersit       temp  \\\n",
+       "0       1   0     1        0        6           0           2  14.110847   \n",
+       "1       1   0     1        0        0           0           2  14.902598   \n",
+       "2       1   0     1        0        1           1           1   8.050924   \n",
+       "3       1   0     1        0        2           1           1   8.200000   \n",
+       "4       1   0     1        0        3           1           1   9.305237   \n",
+       "\n",
+       "      atemp      hum  windspeed(mph)  windspeed(ms)   cnt  \n",
+       "0  18.18125  80.5833       10.749882       4.805490   985  \n",
+       "1  17.68695  69.6087       16.652113       7.443949   801  \n",
+       "2   9.47025  43.7273       16.636703       7.437060  1349  \n",
+       "3  10.60610  59.0435       10.739832       4.800998  1562  \n",
+       "4  11.46350  43.6957       12.522300       5.597810  1600  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "URL = \"https://drive.usercontent.google.com/download?id=1-4wgz9AFXrD3tZfqHJLMhCmy4BUzAX96&export=download\"\n",
+    "\n",
+    "df = pd.read_csv(URL, header=0) # put your code herec\n",
+    "if len(df) == 0:\n",
+    "    print(\"Error: file not found\")\n",
+    "    raise ValueError\n",
+    "\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
