--- a/hw-04.ipynb
+++ b/hw-04.ipynb
@@ -439,6 +439,367 @@
    "source": [
     "Насамкінець подивимося середні ознак (метод mean), щоб оцінити масштаб ознак і частки 1 у бінарних ознак."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Завдання 4\n",
+    "\n",
+    "Виведіть середні ознак."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "season               2.496580\n",
+       "yr                   0.500684\n",
+       "mnth                 6.519836\n",
+       "holiday              0.028728\n",
+       "weekday              2.997264\n",
+       "workingday           0.683995\n",
+       "weathersit           1.395349\n",
+       "temp                20.310776\n",
+       "atemp               23.717699\n",
+       "hum                 62.789406\n",
+       "windspeed(mph)      12.762576\n",
+       "windspeed(ms)        5.705220\n",
+       "cnt               4504.348837\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Put your code here\n",
+    "means = df.mean()\n",
+    "means"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Проблема перша: колінеарні ознаки"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ознаки мають різний масштаб, отже, для подальшої роботи нам краще нормувати матрицю об'єкти-ознаки."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Отже, у наших даних одна ознака дублює іншу, і є ще дві дуже схожі. Звичайно, ми могли б одразу видалити дублікати, але давайте подивимося, як відбувалося б навчання моделі, якби ми не помітили цю проблему.\n",
+    "\n",
+    "Для початку проведемо масштабування, або стандартизацію ознак: з кожної ознаки віднімемо її середнє і поділимо на стандартне відхилення. Це можна зробити за допомогою методу scale.\n",
+    "\n",
+    "Крім того, необхідно перемішати вибірку, це буде потрібно для крос-валідації."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import scale\n",
+    "from sklearn.utils import shuffle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>season</th>\n",
+       "      <th>yr</th>\n",
+       "      <th>mnth</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>workingday</th>\n",
+       "      <th>weathersit</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>atemp</th>\n",
+       "      <th>hum</th>\n",
+       "      <th>windspeed(mph)</th>\n",
+       "      <th>windspeed(ms)</th>\n",
+       "      <th>cnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>703</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19.509153</td>\n",
+       "      <td>23.45270</td>\n",
+       "      <td>73.3750</td>\n",
+       "      <td>11.666643</td>\n",
+       "      <td>5.215308</td>\n",
+       "      <td>6606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.665237</td>\n",
+       "      <td>8.89390</td>\n",
+       "      <td>43.7826</td>\n",
+       "      <td>18.609384</td>\n",
+       "      <td>8.318902</td>\n",
+       "      <td>1550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13.564153</td>\n",
+       "      <td>15.94060</td>\n",
+       "      <td>58.5833</td>\n",
+       "      <td>15.375093</td>\n",
+       "      <td>6.873086</td>\n",
+       "      <td>3747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>456</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>17.459153</td>\n",
+       "      <td>20.86435</td>\n",
+       "      <td>67.6250</td>\n",
+       "      <td>11.541889</td>\n",
+       "      <td>5.159539</td>\n",
+       "      <td>6041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>633</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22.550000</td>\n",
+       "      <td>27.20895</td>\n",
+       "      <td>57.0000</td>\n",
+       "      <td>15.833507</td>\n",
+       "      <td>7.078009</td>\n",
+       "      <td>7538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15.758268</td>\n",
+       "      <td>19.00455</td>\n",
+       "      <td>52.7391</td>\n",
+       "      <td>18.130468</td>\n",
+       "      <td>8.104814</td>\n",
+       "      <td>2417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18.723347</td>\n",
+       "      <td>22.28480</td>\n",
+       "      <td>47.9583</td>\n",
+       "      <td>20.334232</td>\n",
+       "      <td>9.089956</td>\n",
+       "      <td>3744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26.035000</td>\n",
+       "      <td>28.75790</td>\n",
+       "      <td>84.8750</td>\n",
+       "      <td>9.958143</td>\n",
+       "      <td>4.451561</td>\n",
+       "      <td>3907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>435</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.831299</td>\n",
+       "      <td>17.98350</td>\n",
+       "      <td>47.6957</td>\n",
+       "      <td>14.913329</td>\n",
+       "      <td>6.666665</td>\n",
+       "      <td>4911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16.912500</td>\n",
+       "      <td>20.86415</td>\n",
+       "      <td>81.9167</td>\n",
+       "      <td>16.791339</td>\n",
+       "      <td>7.506186</td>\n",
+       "      <td>2162</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>731 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     season  yr  mnth  holiday  weekday  workingday  weathersit       temp  \\\n",
+       "703       4   1    12        0        2           1           1  19.509153   \n",
+       "33        1   0     2        0        4           1           1   7.665237   \n",
+       "300       4   0    10        0        5           1           2  13.564153   \n",
+       "456       2   1     4        0        0           0           2  17.459153   \n",
+       "633       4   1     9        0        2           1           1  22.550000   \n",
+       "..      ...  ..   ...      ...      ...         ...         ...        ...   \n",
+       "71        1   0     3        0        0           0           1  15.758268   \n",
+       "106       2   0     4        0        0           0           1  18.723347   \n",
+       "270       4   0     9        0        3           1           2  26.035000   \n",
+       "435       1   1     3        0        0           0           1  14.831299   \n",
+       "102       2   0     4        0        3           1           2  16.912500   \n",
+       "\n",
+       "        atemp      hum  windspeed(mph)  windspeed(ms)   cnt  \n",
+       "703  23.45270  73.3750       11.666643       5.215308  6606  \n",
+       "33    8.89390  43.7826       18.609384       8.318902  1550  \n",
+       "300  15.94060  58.5833       15.375093       6.873086  3747  \n",
+       "456  20.86435  67.6250       11.541889       5.159539  6041  \n",
+       "633  27.20895  57.0000       15.833507       7.078009  7538  \n",
+       "..        ...      ...             ...            ...   ...  \n",
+       "71   19.00455  52.7391       18.130468       8.104814  2417  \n",
+       "106  22.28480  47.9583       20.334232       9.089956  3744  \n",
+       "270  28.75790  84.8750        9.958143       4.451561  3907  \n",
+       "435  17.98350  47.6957       14.913329       6.666665  4911  \n",
+       "102  20.86415  81.9167       16.791339       7.506186  2162  \n",
+       "\n",
+       "[731 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_shuffled = shuffle(df, random_state=42)\n",
+    "X = scale(df_shuffled[df_shuffled.columns[:-1]])\n",
+    "y = df_shuffled[\"cnt\"]\n",
+    "\n",
+    "df_shuffled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Давайте навчимо лінійну регресію на наших даних і подивимося на ваги ознак."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression"
+   ]
   }
  ],
  "metadata": {
