--- a/hw-04.ipynb
+++ b/hw-04.ipynb
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "[731 rows x 13 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,11 +794,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Завдання 5\n",
+    "\n",
+    "Створіть об'єкт лінійного регресора, навчіть його на всіх даних і виведіть ваги моделі (ваги зберігаються у змінній `coef_` класу регресора). Можна виводити пари (назва ознаки, вага), скориставшись функцією `zip`, вбудованою в мову python. Назви ознак зберігаються у змінній `df.columns`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "zero-dimensional arrays cannot be concatenated",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[68], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m model_linenian \u001b[38;5;241m=\u001b[39m LinearRegression()\n\u001b[0;32m      3\u001b[0m linenian_regressor \u001b[38;5;241m=\u001b[39m model_linenian\u001b[38;5;241m.\u001b[39mfit(X, y)\n\u001b[1;32m----> 5\u001b[0m weight_linenian_regressor \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlinenian_regressor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mintercept_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlinenian_regressor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcoef_\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m weight_linenian_regressor\n\u001b[0;32m      9\u001b[0m columns_for_x_display \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(df_features_columns)\n",
+      "\u001b[1;31mValueError\u001b[0m: zero-dimensional arrays cannot be concatenated"
+     ]
+    }
+   ],
+   "source": [
+    "# Put your code here\n",
+    "model_linenian = LinearRegression()\n",
+    "linenian_regressor = model_linenian.fit(X, y)\n",
+    "\n",
+    "weight_linenian_regressor = np.concatenate((linenian_regressor.intercept_, linenian_regressor.coef_))\n",
+    "\n",
+    "weight_linenian_regressor\n",
+    "\n",
+    "columns_for_x_display = \"\\\\\\\\\".join(df_features_columns)\n",
+    "columns_for_y_display = \"\\\\\\\\\".join(\n",
+    "    [f\"{_:.5f}\" for _ in weight_linenian_regressor\n",
+    "]\n",
+    ")\n",
+    "\n",
+    "result_regressor = display(\n",
+    "    Markdown(\n",
+    "        f\"$$ \\\\vec x = \\\\begin{{pmatrix}} 1 \\\\\\\\ {columns_for_x_display} \\\\end{{pmatrix}} ,   \\\\vec {{\\\\omega}} = \\\\begin{{pmatrix}} {columns_for_y_display} \\\\end{{pmatrix}} $$\"\n",
+    "    )\n",
+    ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ми бачимо, що ваги при лінійно-залежних ознаках за модулем значно більші, ніж при інших ознаках. Щоб зрозуміти, чому так сталося, згадаємо аналітичну формулу, за якою обчислюються ваги лінійної моделі в методі найменших квадратів:\n",
+    "\n",
+    "$$w = (X^TX)^{-1} X^T y$$\n",
+    "\n",
+    "Якщо в $X$ є колінеарні (лінійно-залежні) стовпці, матриця $X^TX$ стає виродженою, і формула перестає бути коректною. Чим більш залежні ознаки, тим менший визначник цієї матриці й тим гірша апроксимація $Xw \\approx y$. Таку ситуацію називають _проблемою мультиколінеарності_."
    ]
   }
  ],
