--- a/hw-04.ipynb
+++ b/hw-04.ipynb
@@ -812,19 +812,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Markdown, display\n",
+    "\n",
+    "\n",
+    "def weight_display(weight):\n",
+    "    columns_for_x_display = \"\\\\\\\\\".join(df_features_columns)\n",
+    "    columns_for_y_display = \"\\\\\\\\\".join([f\"{_:.8f}\" for _ in weight])\n",
+    "\n",
+    "    return display(\n",
+    "        Markdown(\n",
+    "            f\"$$ \\\\vec x = \\\\begin{{pmatrix}} 1 \\\\\\\\ {columns_for_x_display} \\\\end{{pmatrix}} ,   \\\\vec {{\\\\omega}} = \\\\begin{{pmatrix}} {columns_for_y_display} \\\\end{{pmatrix}} $$\"\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "zero-dimensional arrays cannot be concatenated",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[68], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m model_linenian \u001b[38;5;241m=\u001b[39m LinearRegression()\n\u001b[0;32m      3\u001b[0m linenian_regressor \u001b[38;5;241m=\u001b[39m model_linenian\u001b[38;5;241m.\u001b[39mfit(X, y)\n\u001b[1;32m----> 5\u001b[0m weight_linenian_regressor \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlinenian_regressor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mintercept_\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlinenian_regressor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcoef_\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m weight_linenian_regressor\n\u001b[0;32m      9\u001b[0m columns_for_x_display \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(df_features_columns)\n",
-      "\u001b[1;31mValueError\u001b[0m: zero-dimensional arrays cannot be concatenated"
-     ]
+     "data": {
+      "text/markdown": [
+       "$$ \\vec x = \\begin{pmatrix} 1 \\\\ season\\\\yr\\\\mnth\\\\holiday\\\\weekday\\\\workingday\\\\weathersit\\\\temp\\\\atemp\\\\hum\\\\windspeed(mph)\\\\windspeed(ms) \\end{pmatrix} ,   \\vec {\\omega} = \\begin{pmatrix} 4504.35452694\\\\570.86364166\\\\1021.96042452\\\\-141.30063319\\\\-86.75760471\\\\137.22725832\\\\56.38980357\\\\-330.22718259\\\\367.47990308\\\\585.55217977\\\\-145.61552282\\\\12454356291009.72656250\\\\-12454356291208.18750000 \\end{pmatrix} $$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -832,22 +853,11 @@
     "model_linenian = LinearRegression()\n",
     "linenian_regressor = model_linenian.fit(X, y)\n",
     "\n",
-    "weight_linenian_regressor = np.concatenate((linenian_regressor.intercept_, linenian_regressor.coef_))\n",
-    "\n",
-    "weight_linenian_regressor\n",
-    "\n",
-    "columns_for_x_display = \"\\\\\\\\\".join(df_features_columns)\n",
-    "columns_for_y_display = \"\\\\\\\\\".join(\n",
-    "    [f\"{_:.5f}\" for _ in weight_linenian_regressor\n",
-    "]\n",
+    "weight_linenian_regressor = np.concatenate(\n",
+    "    ([linenian_regressor.intercept_], linenian_regressor.coef_)\n",
     ")\n",
     "\n",
-    "result_regressor = display(\n",
-    "    Markdown(\n",
-    "        f\"$$ \\\\vec x = \\\\begin{{pmatrix}} 1 \\\\\\\\ {columns_for_x_display} \\\\end{{pmatrix}} ,   \\\\vec {{\\\\omega}} = \\\\begin{{pmatrix}} {columns_for_y_display} \\\\end{{pmatrix}} $$\"\n",
-    "    )\n",
-    ")\n",
-    "\n"
+    "weight_display(weight_linenian_regressor)\n"
    ]
   },
   {
@@ -859,6 +869,68 @@
     "$$w = (X^TX)^{-1} X^T y$$\n",
     "\n",
     "Якщо в $X$ є колінеарні (лінійно-залежні) стовпці, матриця $X^TX$ стає виродженою, і формула перестає бути коректною. Чим більш залежні ознаки, тим менший визначник цієї матриці й тим гірша апроксимація $Xw \\approx y$. Таку ситуацію називають _проблемою мультиколінеарності_."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "З парою (temp, atemp) трохи менше корелюючих змінних такого не сталося, однак на практиці завжди варто уважно стежити за коефіцієнтами при схожих ознаках."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для того щоб розв'язати проблему мультиколінеарності, потрібно скористатися регуляризатором. До оптимізуючого функціоналу додають $L_1$ або $L_2$ норму ваг, помножену на коефіцієнт регуляризації $\\alpha$. У першому випадку метод називається Lasso, а у другому — Ridge."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Завдання 6\n",
+    "Давайте спробуємо навчити лінійні моделі з $L_1$ і $L_2$-регуляризацією, а далі порівняємо їхні ваги. Навчіть регресори Ridge і Lasso з параметрами за замовчуванням і переконайтеся, що проблема з вагами вирішилась."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Навчіть лінійну модель з $L_1$-регуляризацією (клас Lasso) і виведіть ваги."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "$$ \\vec x = \\begin{pmatrix} 1 \\\\ season\\\\yr\\\\mnth\\\\holiday\\\\weekday\\\\workingday\\\\weathersit\\\\temp\\\\atemp\\\\hum\\\\windspeed(mph)\\\\windspeed(ms) \\end{pmatrix} ,   \\vec {\\omega} = \\begin{pmatrix} 4504.34883721\\\\560.24161603\\\\1019.46349407\\\\-128.73062704\\\\-86.15278133\\\\137.34789390\\\\55.21237064\\\\-332.36985696\\\\376.36323621\\\\576.53079350\\\\-144.12915500\\\\-197.13968940\\\\-0.00000003 \\end{pmatrix} $$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Put your code here\n",
+    "from sklearn.linear_model import Lasso\n",
+    "\n",
+    "\n",
+    "model_lasso = Lasso()\n",
+    "lasso_regressor = model_lasso.fit(X, y)\n",
+    "\n",
+    "weight_lasso_regressor = np.concatenate(\n",
+    "    ([lasso_regressor.intercept_], lasso_regressor.coef_)\n",
+    ")\n",
+    "\n",
+    "weight_display(weight_lasso_regressor)"
    ]
   }
  ],
